Changed Arrays.listOf() to List.of()